# ovitoWallace

./: CMakeLists.txt
cmake/: FindTaco.cmake
src/plugins/: CMakeLists.txt
src/plugins/particles/gui/: CMakeLists.txt
src/plugins/particles/objects/: ParticlesObject.cpp  ParticlesObject.h
src/plugins/particles/scripting/: ModifierBinding.cpp
src/plugins/wallace/: CMakeLists.txt  Wallace.cpp  Wallace.h
src/plugins/wallace/gui/: CMakeLists.txt  WallaceGui.cpp  WallaceGui.h
src/plugins/wallace/gui/modifier/atomic_strain_mod_burgers/: AtomicStrainModBurgersEditor.cpp  AtomicStrainModBurgersEditor.h  backup.cpp
src/plugins/wallace/gui/modifier/elastic_displacements/: CalculateElasticDisplacementsModifierEditor.cpp  CalculateElasticDisplacementsModifierEditor.h
src/plugins/wallace/gui/modifier/elastic_stability/: CalculateElasticStabilityModifierEditor.cpp  CalculateElasticStabilityModifierEditor.h  backup.cpp
src/plugins/wallace/modifier/atomic_strain_mod_burgers/: AtomicStrainModBurgers.cpp  AtomicStrainModBurgers.h
src/plugins/wallace/modifier/elastic_displacements/: CalculateElasticDisplacementsModifier.cpp  CalculateElasticDisplacementsModifier.h  backup.cpp  backup.h
src/plugins/wallace/modifier/elastic_stability/: CalculateElasticStabilityModifier.cpp  CalculateElasticStabilityModifier.h  ElasticConstants.cpp  ElasticConstants.h
src/plugins/wallace/resources/python/ovito/modifiers/wallace/: __init__.py
src/plugins/wallace/scripting/: PythonInterface.cpp
(+2 files in other folders)
